[gd_scene load_steps=2 format=3 uid="uid://f24dtlbjueam"]

[ext_resource type="Script" path="res://3DCharacterControllers/PlatformerCharacter/Camera/TPS/TPS_Camera.gd" id="1_xdmex"]

[node name="TPS_Cam" type="Node3D"]
script = ExtResource("1_xdmex")

[node name="CameraHolder" type="SpringArm3D" parent="."]
spring_length = 5.0
margin = 0.5

[node name="NormalViewCam" type="Camera3D" parent="CameraHolder"]
current = true

[node name="TimerHolder" type="Node" parent="."]

[node name="ScreenShakeTimer" type="Timer" parent="TimerHolder"]
one_shot = true

[connection signal="timeout" from="TimerHolder/ScreenShakeTimer" to="." method="_on_screen_shake_timer_timeout"]
